# fableforge

./: .gitignore  .panproject.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vitest.config.ts
.github/workflows/: release.yml
docs/: IMPLEMENTATION_PLAN.md  PRD.md
packaging/arch/: PKGBUILD  fableforge.desktop
scripts/: extract-changelog.sh
src/: App.tsx  main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio_engine.rs  faba.rs  lib.rs  main.rs  mki.rs
src-tauri/src/core/: error.rs  network.rs
src-tauri/src/db/: device_db.rs  mod.rs
src-tauri/src/device/: integrity.rs  mod.rs  recovery.rs  writer.rs
src-tauri/src/dto/: device_management.rs  fababox.rs  mod.rs  s3.rs  system.rs
src-tauri/src/s3/: client.rs  config.rs  credentials.rs  index.rs  lock.rs  mod.rs  sync.rs
src/atoms/: slot.ts
src/components/: AddRegistryDialog.tsx  CharacterCard.module.css  CharacterCard.tsx  CharacterForm.tsx  CollectionCard.tsx  CreateCollectionDialog.tsx  DeepLinkResolver.tsx  EphemeralBanner.module.css  EphemeralBanner.tsx  OverwriteConfirmDialog.tsx  RecoveryDialog.tsx  S3ConfigDialog.tsx  SearchBar.tsx  Sidebar.tsx  SlotEditor.tsx  SlotSelectionDialog.tsx  SlotSelector.tsx  Toast.tsx  ToastProvider.tsx  TrackListEditor.tsx  WriteFlowOrchestrator.tsx  WriteProgressDialog.tsx
src/components/__tests__/: SearchBar.test.tsx
src/hooks/: useAudioPlayer.ts  useDeepLinkListener.ts
src/lib/: schemas.ts  status.ts  store.ts  url.ts
src/lib/__tests__/: url.test.ts
src/pages/: CharacterDetailPage.tsx  CollectionsPage.tsx  DeviceInventoryPage.tsx  EditorPage.tsx  GalleryPage.tsx  SettingsPage.tsx
src/services/: clash.ts  deeplink.ts  device.ts  registry.ts  s3.ts
src/services/__tests__/: clash.test.ts  deeplink.test.ts
src/stores/: collections.ts  deeplink.ts  device.ts  registries.ts  s3.ts  theme.ts
src/stores/__tests__/: deeplink.test.ts  registries.test.ts
src/styles/: index.css
