[package]
name = "fableforge"
version = "0.1.0"
description = "Desktop companion app for managing custom audio content on FABA-compatible music players"
authors = ["d71"]
license = "MIT"
edition = "2021"

[lib]
name = "fableforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
id3 = "1"
regex = "1"
lazy_static = "1"
tokio = { version = "1", features = ["fs"] }
mountpoints = "0.2"
tauri-plugin-store = "2"
tracing = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
