[package]
name = "fableforge"
version = "0.2.0"
description = "Desktop companion app for managing custom audio content on FABA-compatible music players"
authors = ["d71"]
license = "GPL-3.0"
edition = "2021"

[lib]
name = "fableforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
id3 = "1"
regex = "1"
lazy_static = "1"
tokio = { version = "1", features = ["fs", "macros", "rt"] }
mountpoints = "0.2"
tauri-plugin-store = "2"
tracing = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
base64 = "0.22"
image = "0.25"
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-types = "1"
aws-credential-types = "1"
keyring = { version = "3", features = ["linux-native"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"
